<resources>
    <string name="app_name">Cal-Cee</string>

    <string name="Clear">C</string>
    <string name="ClearAll">AC</string>
    <string name="Modulo">Mod</string>
    <string name="Divide">/</string>

    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Multiply">X</string>

    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Subtract">-</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Add">+</string>

    <string name="Zero">0</string>
    <string name="FullStop">.</string>
    <string name="Equal">=</string>

</resources>
