<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.draiden.cal_cee.CalcMain"
    android:weightSum="6">
    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:textSize="40sp"
        android:background="@android:color/transparent"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <!--First Row  -->
        <Button
            android:id="@+id/Clear"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickC"
            android:text="@string/Clear" />

        <Button
            android:id="@+id/ClearAll"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickAC"
            android:text="@string/ClearAll" />

        <Button
            android:id="@+id/Modulo"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="clickModulo"
            android:text="@string/Modulo"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Divide"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickDivide"
            android:text="@string/Divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <!--Second Row  -->
        <Button
            android:id="@+id/Seven"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickSeven"
            android:textAlignment="center"
            android:text="@string/Seven" />

        <Button
            android:id="@+id/Eight"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickEight"
            android:text="@string/Eight" />

        <Button
            android:id="@+id/Nine"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickNine"
            android:text="@string/Nine" />

        <Button
            android:id="@+id/Multiply"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickMultiply"
            android:text="@string/Multiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <!--Third Row  -->
        <Button
            android:id="@+id/Four"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickFour"
            android:textAlignment="center"
            android:text="@string/Four" />

        <Button
            android:id="@+id/Five"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickFive"
            android:text="@string/Five" />

        <Button
            android:id="@+id/Six"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickSix"
            android:text="@string/Six" />

        <Button
            android:id="@+id/Subtract"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickSubtract"
            android:text="@string/Subtract" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <!--Fourth Row  -->
        <Button
            android:id="@+id/One"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickOne"
            android:textAlignment="center"
            android:text="@string/One" />

        <Button
            android:id="@+id/Two"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickTwo"
            android:text="@string/Two" />

        <Button
            android:id="@+id/Three"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickThree"
            android:text="@string/Three" />

        <Button
            android:id="@+id/Add"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickAdd"
            android:text="@string/Add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <!--Fifth Row  -->
        <Button
            android:id="@+id/Zero"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="40sp"
            android:onClick="clickZero"
            android:textAlignment="center"
            android:text="@string/Zero" />

        <Button
            android:id="@+id/FullStop"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickFullStop"
            android:text="@string/FullStop" />

        <Button
            android:id="@+id/Equal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:onClick="clickEqual"
            android:text="@string/Equal" />

    </LinearLayout>

</LinearLayout>
